--- a/.github/workflows/检查更新.yml
+++ b/.github/workflows/检查更新.yml
@@ -15,27 +15,36 @@ name: 检查更新
 env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: openwrt-22.03
+  TZ: Asia/Shanghai
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: 0 0 * * 1
+    - cron: 0 9 * * SAT
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version'
+        required: false
+        default: ''	
 
 jobs:
   jell:
     runs-on: ubuntu-latest
+
     steps:
+
     - name: 获取提交哈希值
       id: getHash
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
-       
+        echo "::set-output name=commitHash::$(git rev-parse HEAD)"
     - name: 比较提交哈希值
       id: cacheHash
       uses: actions/cache@v2
       with:
         path: .commitHash
         key: HEAD-${{ steps.getHash.outputs.commitHash }}
+
     - name: 保存新的哈希值
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
@@ -47,16 +56,17 @@ jobs:
         echo "date=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
         echo "date2=$(date +'%m/%d %Y')" >> $GITHUB_ENV
         echo "date3=$(date +'%m.%d')" >> $GITHUB_ENV
-        echo "date4=$(date +'%m.%d.%Y')" >> $GITHUB_ENV        
+        echo "date4=$(date +'%m.%d.%H')" >> $GITHUB_ENV        
+        sudo timedatectl set-timezone "$TZ"
     - name: 触发编译
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v1
       with:
-        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
-        event-type: ${{ env.date3 }} 
+        token: ${{ secrets.REPO_TOKEN }}
+        event-type: ${{ env.date3 }} ${{ github.event.inputs.version }}
  
     - name: 删除工作流
-      uses: GitRML/delete-workflow-runs@main
+      uses: Mattraks/delete-workflow-runs@v2.0.2
       with:
         retain_days: 1
         keep_minimum_runs: 1
