--- a/.github/workflows/检查更新.yml
+++ b/.github/workflows/检查更新.yml
@@ -1,4 +1,3 @@
-
 #
 # Copyright (c) 2019-2021 P3TERX <https://p3terx.com>
 #
@@ -10,63 +9,48 @@
 # Description: Source code update checker
 #
 
-name: 检查更新
+name: Update Checker
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
-  TZ: Asia/Shanghai
 
 on:
-  schedule:
-    - cron: 0 9 * * SAT
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version'
-        required: false
-        default: ''	
+#  schedule:
+#    - cron: 0 */18 * * *
 
 jobs:
-  jell:
+  check:
     runs-on: ubuntu-latest
 
     steps:
 
-    - name: 获取提交哈希值
+    - name: Get Commit Hash
       id: getHash
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
         echo "::set-output name=commitHash::$(git rev-parse HEAD)"
-    - name: 比较提交哈希值
+    - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@v2
       with:
         path: .commitHash
         key: HEAD-${{ steps.getHash.outputs.commitHash }}
 
-    - name: 保存新的哈希值
+    - name: Save New Commit Hash
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
         echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
-        
-    - name: 设置当前的日期
-      id: date
-      run: |
-        echo "date=$(date +'%Y.%m.%d-%H%M')" >> $GITHUB_ENV
-        echo "date2=$(date +'%m/%d %Y')" >> $GITHUB_ENV
-        echo "date3=$(date +'%m.%d')" >> $GITHUB_ENV
-        echo "date4=$(date +'%m.%d.%H')" >> $GITHUB_ENV        
-        sudo timedatectl set-timezone "$TZ"
-    - name: 触发编译
+    - name: Trigger build
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v1
       with:
-        token: ${{ secrets.REPO_TOKEN }}
-        event-type: ${{ env.date3 }} ${{ github.event.inputs.version }}
- 
-    - name: 删除工作流
-      uses: Mattraks/delete-workflow-runs@v2.0.2
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+        event-type: Source Code Update
+
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 1
         keep_minimum_runs: 1
