--- a/.github/workflows/检查更新.yml
+++ b/.github/workflows/检查更新.yml
@@ -1,3 +1,18 @@
+#
+# Copyright (c) 2019-2021 P3TERX <https://p3terx.com>
+#
+# This is free software, licensed under the MIT License.
+# See /LICENSE for more information.
+#
+# https://github.com/P3TERX/Actions-OpenWrt
+# File: .github/workflows/update-checker.yml
+# Description: Source code update checker
+#
+name: 检查更新
+env:
+  REPO_URL: https://github.com/openwrt/openwrt
+  REPO_BRANCH: master
+
 on:
   workflow_dispatch:
   #schedule:
